Add CategoryController & configure swagger
